policies/templates/requiredlimits.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredresources
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredResources
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredresources

        violation[{
          "msg": msg
        }] {
          input.review.kind.kind == "Deployment"
          not has_limits(input.review.object.spec.template.spec.containers)
          msg := "All containers must specify resources.requests and resources.limits"
        }

        has_limits(containers) {
          every c in containers {
            c.resources.requests.cpu
            c.resources.requests.memory
            c.resources.limits.cpu
            c.resources.limits.memory
          }
        }
